# File-Backup

./: .gitignore  LICENSE  backup.py
python-backup/: backup.py  backup_config.py
rusty_backup/: Cargo.toml
rusty_backup/src/: main.rs
