[package]
name = "rusty_backup"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = {version = "1.0.136", features = ["derive"]}
quick-xml = {version = "0.22.0", features = ["serialize"]}